sqlalchemy (1.2.5+ds1-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/control: Set Vcs-* to salsa.debian.org
  * d/copyright: Use https protocol in Format field
  * d/control: Deprecating priority extra as per policy 4.0.1
  * d/watch: Use https protocol
  * d/changelog: Remove trailing whitespaces

  [ Piotr Ożarowski ]
  * New upstream release

 -- Ondřej Nový <onovy@debian.org>  Tue, 13 Feb 2018 09:59:31 +0100

sqlalchemy (1.2.0~b1+ds1-1) experimental; urgency=medium

  * New upstream release

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 20 Jul 2017 15:27:00 +0200

sqlalchemy (1.1.11+ds1-1) unstable; urgency=medium

  * New upstream release
  * Standards-Version bumped to 4.0.0 (no changes needed)

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 20 Jun 2017 20:28:45 +0200

sqlalchemy (1.1.6+ds1-1) unstable; urgency=medium

  * New upstream release

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 17 Mar 2017 00:24:43 +0100

sqlalchemy (1.1.5+ds1-1) unstable; urgency=medium

  * New upstream release

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 22 Jan 2017 15:50:34 +0100

sqlalchemy (1.1.4+ds1-1) unstable; urgency=medium

  * New upstream release
  * pydist files no longer require ">= 1.X~, << 1.X+1" dependency, SQLAlchemy
    is stable enough

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 17 Nov 2016 20:20:23 +0100

sqlalchemy (1.1.3+ds1-1) experimental; urgency=medium

  * New upstream version

 -- Piotr Ożarowski <piotr@debian.org>  Sat, 05 Nov 2016 22:07:47 +0100

sqlalchemy (1.1.2+ds1-1) experimental; urgency=medium

  * New upstream version

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 19 Oct 2016 19:12:48 +0200

sqlalchemy (1.1.1+ds1-1) experimental; urgency=medium

  * New upstream version
  * debian/rules: remove no longer needed/available (now default)
    --with-cextensions build option

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 11 Oct 2016 16:38:16 +0200

sqlalchemy (1.0.15+ds1-1) unstable; urgency=medium

  * New upstream version