@@ -6,8 +6,8 @@ Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.o
 Build-Depends: debhelper (>= 9), dh-python,
  python-all-dev (>= 2.6.5-2~), python3-all-dev (>= 3.1.2-8~),
  python-setuptools (>= 0.6b3-1~), python3-setuptools,
-Build-Depends-Indep: python-sphinx (>= 1.1.2), python-mako (>= 0.4.1),
- python-changelog, python-sphinx-paramlinks, python-zzzeeksphinx
+Build-Depends-Indep: python3-sphinx (>= 1.6), python3-mako (>= 0.4.1),
+ python3-changelog, python3-sphinx-paramlinks, python3-zzzeeksphinx
 Standards-Version: 4.0.0
 Homepage: http://www.sqlalchemy.org/
 Vcs-Git: https://salsa.debian.org/python-team/modules/sqlalchemy.git
